# Visualizer_App

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  test.glade
src/Model/: VisualizerConfig.cpp  VisualizerConfig.h
src/Services/: FifoProcessorService.cpp  FifoProcessorService.h  IConfigService.h  IFifoProcessorService.h  IFifoReaderService.h  MPDReaderService.cpp  MPDReaderService.h  SimpleConfigService.cpp  SimpleConfigService.h  SimpleProcessorService.cpp  SimpleProcessorService.h  SimpleReaderService.cpp  SimpleReaderService.h  TimeDomainProcessorService.cpp  TimeDomainProcessorService.h  XMLConfigService.cpp  XMLConfigService.h
src/Util/: VisualizerWidgetFactory.cpp  VisualizerWidgetFactory.h  VisualizerWindowFactory.cpp  VisualizerWindowFactory.h
src/Views/: SettingsWindow.cpp  SettingsWindow.h  VisualizerWindow.cpp  VisualizerWindow.h
src/Views/Widgets/: BlockVisualizer.cpp  BlockVisualizer.h  ISettingsDialog.h  IVisualizer.h  LineVisualizer.cpp  LineVisualizer.h  SettingsDialog.cpp  SettingsDialog.h
src/Views/Widgets/ComboBoxModels/: IntegerColumn.cpp  IntegerColumn.h
